fix: mask height difference in code editor and reduce contrast of editor elements in light mode

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -94,7 +94,7 @@ html.dark::before {
   @apply text-lg font-bold mb-3 dark:text-gray-100;
 }
 .page-section table {
-  @apply w-full mb-10 text-base text-slate-700 rounded-lg shadow-md border border-slate-300 border-separate border-spacing-0;
+  @apply w-full mb-10 text-base text-slate-700 rounded-lg shadow-sm border border-slate-300 border-separate border-spacing-0;
   @apply dark:border-purple-950 dark:shadow-none dark:text-slate-200;
 }
 .page-section table th {
